<resources>
    <string name="app_name">App</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="edit_item">Edit Item</string>
    <string name="home">Home</string>
    <string name="detail">Detail</string>
    <string name="edit">Edit</string>
    <string name="select">Select</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="not_selected">Not selected</string>
</resources>